SERVER-15958 initialize IndexScanStats fields isMultiKey and indexName on IndexScan construction